--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Formularz CSS + HTML</title>
+        <link rel="stylesheet"
+  href="https://fonts.googleapis.com/css?family=Merriweather">
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
@@ -15,46 +17,75 @@
         <div class="form">
             <form id="test-form">
                 <label for="fname">Imię: </label>
-                <input type="text" id="fname" name="name-form" required>
+                <input type="text" id="fname" name="name-form" placeholder="Name" required>
                 <label for="lname">Nazwisko: </label>
-                <input type="text" id="lname" name="surname-form" required>
+                <input type="text" id="lname" name="surname-form" placeholder="Surname" required>
                 <label for="age">Wiek: </label>
-                <input type="number" id="age" name="age-form" min="18" max="100">
-                <label for="email">Email: </label>
-                <input type="email" name="email-form" id="email"required>
+                <input type="number" id="age" name="age-form" min="18" max="100" placeholder="Age">
+                <label for="email">E-mail: </label>
+                <input type="email" name="email-form" id="email" placeholder="Email" required>
                 <label for="picksmth">Wybierz tylko jedną opcję: </label>
-                <select name="select-form" id="picksmth" required>
+                <select name="select-form" id="picksmth" placeholder="Select" required>
                     <option value="option1">Option 1</option>
                     <option value="option2">Option 2</option>
                     <option value="option3">Option 3</option>
                     <option value="option4">Option 4</option>
                 </select>
-                <label for="radio">Wybierz jedno z poniższych:</label>
-                <input type="radio" name="radio-form" id="radio" required>
-                <label for="picksmth2">Wybierz jedną opcję: </label>
-                <select name="select2-form" id="picksmth2" required>
-                    <option value="option1">Option 1</option>
-                    <option value="option2">Option 2</option>
-                    <option value="option3">Option 3</option>
-                    <option value="option4">Option 4</option>
-                    <option value="option5">Option 5</option>
-                    <option value="option6">Option 6</option>
-                </select>
-                <p>Wybierz którekolwiek opcje z poniższych: </p>
-                <input type="checkbox" name="checkbox-form1" id="checkbox1">
-                <label for="checkbox1">Option 1 </label>
-                <input type="checkbox" name="checkbox-form2" id="checkbox2">
-                <label for="checkbox2">Option 2 </label>
-                <input type="checkbox" name="checkbox-form3" id="checkbox3">
-                <label for="checkbox3">Option 3 </label>
-                <input type="checkbox" name="checkbox-form4" id="checkbox4">
-                <label for="checkbox4">Option 4 </label>
-                <input type="checkbox" name="checkbox-form5" id="checkbox5">
-                <label for="checkbox5">Option 5 </label>
-                <label for="comment">Komentarz: </label>
-                <input type="text" name="comment-form" id="comment">
-                <input type="submit" value="Submit">
-                
+                <div id="radio1" class="form-components">
+                    <p>Wybierz jedno z poniższych:</p> 
+                    <label for="radio1">
+                        <input type="radio" name="radio-form" id="radio1" required>
+                        Option1
+                    </label>
+                    <label for="radio2">
+                        <input type="radio" name="radio-form" id="radio2" required>
+                        Option2
+                    </label>
+                    <label for="radio3">
+                        <input type="radio" name="radio-form" id="radio3" required>
+                        Option3
+                    </label>
+                </div>
+                <div id="select" class="form-components">
+                    <label for="picksmth2">Wybierz jedną opcję: </label>
+                    <select name="select2-form" id="picksmth2" placeholder="Select" required>
+                        <option value="option1">Option 1</option>
+                        <option value="option2">Option 2</option>
+                        <option value="option3">Option 3</option>
+                        <option value="option4">Option 4</option>
+                        <option value="option5">Option 5</option>
+                        <option value="option6">Option 6</option>
+                    </select>
+                </div>
+
+                <div id="checkboxes" class="form-components">
+                    <p>Wybierz którąkolwiek opcję z poniższych: </p>
+                    <label for="checkbox1">
+                        <input type="checkbox" name="checkbox-form1" id="checkbox1">
+                        Option 1 
+                    </label>
+                    <label for="checkbox2">
+                        <input type="checkbox" name="checkbox-form2" id="checkbox2">
+                        Option 2 
+                    </label>
+                    <label for="checkbox3">
+                        <input type="checkbox" name="checkbox-form3" id="checkbox3">
+                        Option 3 
+                    </label>         
+                    <label for="checkbox4">
+                        <input type="checkbox" name="checkbox-form4" id="checkbox4">
+                        Option 4 
+                    </label>
+                    <label for="checkbox5">
+                        <input type="checkbox" name="checkbox-form5" id="checkbox5">
+                        Option 5 
+                    </label>
+                </div>
+                <div class="form-components">
+                    <label for="comment">Komentarz: </label>
+                    <input type="text" name="comment-form" id="comment" placeholder="Enter comments...">
+                </div> 
+                <input type="submit" value="Submit">                
             </form>
         </div>
 
